--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,16 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Malcolm", "Barrett", , "malcolmbarrett@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0299-5825"))
-Description: What the package does (one paragraph).
+Description: Easily create weighted and unweighted empirical cumulative
+    distributions in 'ggplot2'. 'ggecdf' is an extension of 'ggplot2' that
+    allows you to visualize 'ECDFs' via 'geom_ecdf()'.
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+URL: https://github.com/malcolmbarrett/ggecdf
+BugReports: https://github.com/malcolmbarrett/ggecdf/issues
 Imports: 
     ggplot2
 Suggests: 
     tidysmd
-URL: https://github.com/malcolmbarrett/ggecdf
-BugReports: https://github.com/malcolmbarrett/ggecdf/issues
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.2
