--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,13 @@ BugReports: https://github.com/malcolmbarrett/ggecdf/issues
 Imports: 
     ggplot2
 Suggests: 
-    tidysmd
+    spelling,
+    testthat (>= 3.0.0),
+    vdiffr,
+    tidysmd,
+    dplyr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Config/testthat/edition: 3
+Language: en-US
