--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,13 @@ BugReports: https://github.com/malcolmbarrett/ggecdf/issues
 Imports: 
     ggplot2
 Suggests: 
+    dplyr,
     spelling,
     testthat (>= 3.0.0),
-    vdiffr,
     tidysmd,
-    dplyr
+    vdiffr
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Config/testthat/edition: 3
-Language: en-US
