--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/malcolmbarrett/ggecdf/issues
 Imports: 
     ggplot2
 Suggests: 
+    covr,
     dplyr,
     spelling,
     testthat (>= 3.0.0),
